# Field-Service-Document-Intelligence-Google-ADK

./: ARCHITECTURE.md  INTERVIEW_GOOGLE_ADK.md  INTERVIEW_QA.md  INTERVIEW_QA_ADK.md  RAG_Interview_30_QA.md  README.md  README_Development_Plan.md  docker-compose.yml  seed_data.py  test_file.json
airflow/dags/: bu_ingestion_dag.py
ingestion/: chunker.py  embedder.py  pipeline.py
memory/: MEMORY.md  feedback.md  project_status.md  user_profile.md
portals/admin-portal/: package-lock.json  package.json
portals/admin-portal/src/: App.css  App.tsx
portals/member-portal/: package-lock.json  package.json
portals/member-portal/src/: App.tsx
services/agent_service/: .env.example  Dockerfile  pyproject.toml
services/agent_service/agent/: agent.py  session.py
services/agent_service/agent/prompts/: system_prompt.py
services/agent_service/agent_api/: dependencies.py  main.py
services/agent_service/dao/: conversation_dao.py
services/agent_service/db/: client.py  collections.py
services/agent_service/db/models/: __init__.py  conversation.py
services/agent_service/ritecare_tools/tools/: bu1_tools.py  bu2_tools.py  bu3_tools.py  bu4_tools.py  bu5_tools.py  rag_tools.py
services/agent_service/service/: conversation_service.py
services/agent_service/shared/: circuit.py  config.py  exceptions.py  guardrails.py  http_client.py  logging.py
services/agent_service/shared/utils/: http_client.py
services/agent_service/tests/: conftest.py  test_agent_callbacks.py  test_api.py  test_bu_tools.py  test_guardrails.py  test_http_client.py  test_rag_tools.py  test_session.py
services/agent_service/tests/eval/: initial_session_admin.json  initial_session_field_officer.json  ritecare_rbac.test.json  ritecare_responses.test.json  ritecare_tool_routing.test.json  test_agent_evaluator.py  test_config.json
services/appointment_service/: .env.example  Dockerfile  pyproject.toml
services/appointment_service/api/: main.py  router.py
services/appointment_service/common/: config.py
services/appointment_service/common/kafka/: producer.py
services/appointment_service/common/schemas/: request.py  response.py
services/auth_service/: .env.example  Dockerfile  pyproject.toml
services/auth_service/api/: main.py  router.py  schemas.py
services/auth_service/common/: config.py  security.py
services/auth_service/dao/: user_dao.py
services/auth_service/service/: auth_service.py
services/bu1_onboarding/: .env.example  Dockerfile  pyproject.toml
services/bu1_onboarding/api/: dependencies.py  main.py  router.py
services/bu1_onboarding/common/: config.py
services/bu1_onboarding/common/database/: client.py  collections.py
services/bu1_onboarding/common/exceptions/: handlers.py
services/bu1_onboarding/common/limiter/: limiter.py
services/bu1_onboarding/common/logging/: logger.py
services/bu1_onboarding/common/models/: customer.py  document_chunk.py
services/bu1_onboarding/common/schemas/: request.py  response.py
services/bu1_onboarding/dao/: customer_dao.py  vector_dao.py
services/bu1_onboarding/ingestion/: embedder.py  pipeline.py
services/bu1_onboarding/ingestion/loaders/: pdf_loader.py  text_loader.py
services/bu1_onboarding/service/: customer_service.py
services/bu2_sales_maintenance/: .env copy.example  Dockerfile  pyproject.toml
services/bu2_sales_maintenance/api/: dependencies.py  main.py  router.py
services/bu2_sales_maintenance/common/: config.py
services/bu2_sales_maintenance/dao/: contract_dao.py  visit_dao.py
services/bu2_sales_maintenance/service/: contract_service.py  visit_service.py
services/bu3_billing_subscription/: .env.example  Dockerfile  pyproject.toml
services/bu3_billing_subscription/api/: dependencies.py  main.py  router.py
services/bu3_billing_subscription/common/: config.py
services/bu3_billing_subscription/dao/: invoice_dao.py  subscription_dao.py
services/bu3_billing_subscription/service/: invoice_service.py  subscription_service.py
services/bu4_support_fulfillment/: .env.example  Dockerfile  pyproject.toml
services/bu4_support_fulfillment/api/: dependencies.py  (+2 more)
services/bu5_care_operations/: .env copy.example  Dockerfile  pyproject.toml
services/bu5_care_operations/api/: dependencies.py  main.py  router.py
services/bu5_care_operations/common/: auth.py  config.py
services/bu5_care_operations/common/database/: client.py  collections.py
services/bu5_care_operations/common/exceptions/: handlers.py
services/bu5_care_operations/common/kafka/: consumer.py
services/bu5_care_operations/common/logging/: logger.py
services/bu5_care_operations/common/models/: visit.py
services/bu5_care_operations/common/schemas/: request.py  response.py
services/bu5_care_operations/common/slack/: notifier.py
services/bu5_care_operations/dao/: vector_dao.py  visit_dao.py
services/bu5_care_operations/service/: critic.py  visit_service.py
services/ingestion_service/: Dockerfile  pyproject.toml
services/ingestion_service/api/: dependencies.py  main.py  router.py
services/ingestion_service/common/: config.py
services/ingestion_service/pipeline/: chunker.py  embedder.py
services/ingestion_service/service/: ingestion_orchestrator.py
services/slack_gateway/: .env.example  Dockerfile  channel_router.py  config.py  handlers.py  main.py  pyproject.toml
(+42 files in other folders)
