[project]
name = "ritecare-slack-gateway"
version = "0.1.0"
description = "Slack gateway for the RiteCare AI Agent"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.20",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.hatch.build.targets.wheel]
include = ["config.py", "channel_router.py", "handlers.py", "main.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
